# lghts-2023

./: package-lock.json  package.json
moockup/: settings.json
public/: splashscreen.html
src/: App.vue  main.js  styles-old.css  styles.css
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  connection.rs  main.rs  state.rs
src/components/: GetLightStatus.vue  Greet.vue
